# fluidloom-vk

./: .gitignore  BuildSystem.md  CI_CD_STATUS.md  CMakeLists.txt  Dockerfile.tests  FINAL_STATUS.md  GITHUB_ACTIONS_FIX.md  IMPLEMENTATION_STATUS.md  MODULE10_STATUS.md  MODULE11_STATUS.md  MODULE12_STATUS.md  Module1.md  Module10.md  Module11.md  Module12.md  Module5.md  Module6.md  Module7.md  README.md  SESSION_SUMMARY.md  TESTING.md  run_tests.sh  test_grid.vdb  test_results.txt
.github/workflows/: build.yml  code-quality.yml  tests.yml
Forge/: MODULE9_STATUS.md  Module2.md  Module3.md  Module4.md  Module8.md  Module9.md  PROGRESS_UPDATE.md  PROJECT_COMPLETION_SUMMARY.md  Plan.md  Roadmap.md
docs/: README.md  index.html
docs/API_Reference/: index.md
docs/API_Reference/Modules/: module1.md  module2.md
docs/Architecture/: Component_Diagrams.md  Database_Schema.md  Infrastructure.md  System_Architecture.md  Tech_Stack.md  index.md
docs/Developer_Guide/: Building_and_Deployment.md  Code_Standards.md  Development_Workflow.md  Setup_and_Installation.md  Testing_Guide.md  Troubleshooting.md  index.md
docs/Programming_Guide/: Best_Practices.md  Data_Flow.md  Design_Patterns.md  Key_Components.md  State_Management.md  index.md
docs/Tutorials/: Tutorial_1_Getting_Started.md  Tutorial_2_Building_a_Feature.md  Tutorial_3_Advanced_Usage.md  Tutorial_4_Integration_Example.md  index.md
docs/deepdives/: NanoVDB-deeo-dive.html  module1_core_vulkan_context.html  module2_nanovdb_integration.html  module3_field_registry.html  module4_stencil_compilation.html  module5_halo_exchange.html  module6_stencil_dsl.html  module7_execution_graph.html  module8_runtime_scripting.html
docs/doxygen/: Doxyfile
include/core/: Logger.hpp  MemoryAllocator.hpp  VulkanConfig.hpp  VulkanContext.hpp
include/domain/: DomainSplitter.hpp
include/field/: FieldRegistry.hpp
include/graph/: DependencyGraph.hpp  GraphExecutor.hpp
include/halo/: HaloManager.hpp  HaloSync.hpp
include/nanovdb_adapter/: GpuGridManager.hpp  GridLoader.hpp
include/refinement/: RefinementManager.hpp  TopologyRebuilder.hpp
include/script/: LuaContext.hpp  SimulationEngine.hpp
include/stencil/: PipelineCache.hpp  ShaderGenerator.hpp  StencilDefinition.hpp  StencilParser.hpp  StencilRegistry.hpp
include/vis/: VolumeRenderer.hpp
scripts/: run_tests.sh
src/: CMakeLists.txt  main.cpp
src/core/: Logger.cpp  MemoryAllocator.cpp  VulkanContext.cpp
src/domain/: DomainSplitter.cpp
src/field/: FieldRegistry.cpp
src/graph/: DependencyGraph.cpp  GraphExecutor.cpp
src/halo/: HaloManager.cpp  HaloSync.cpp
src/nanovdb_adapter/: GpuGridManager.cpp  GridLoader.cpp
src/refinement/: RefinementManager.cpp  TopologyRebuilder.cpp
src/script/: LuaContext.cpp  SimulationEngine.cpp
src/stencil/: PipelineCache.cpp  ShaderGenerator.cpp  StencilParser.cpp  StencilRegistry.cpp
src/vis/: VolumeRenderer.cpp
tests/: CMakeLists.txt  TestCore.cpp  TestDomain.cpp  TestGraph.cpp  VulkanFixture.hpp  main.cpp
tests/integration/: ShaderCompilationTest.cpp  minimal_test.lua
tools/: CMakeLists.txt  create_test_grid.cpp
